# poshapke

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: .pre-commit-pr.yaml  pre-commit.yaml
poshapke/: manage.py
poshapke/basket/: context_processors.py  models.py  urls.py  views.py
poshapke/basket/migrations/: 0001_initial.py
poshapke/basket/templates/basket/: basket.html
poshapke/fixture/: category.json  products.json
poshapke/orders/: models.py  order.html  urls.py  views.py
poshapke/orders/templates/orders/: order-create.html  orders.html
poshapke/poshapke/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
poshapke/products/: admin.py  apps.py  models.py  urls.py  views.py
poshapke/products/migrations/: 0001_initial.py  0002_alter_products_slug.py
poshapke/products/templates/products/: base.html  index.html  products.html
poshapke/users/: admin.py  authentication.py  forms.py  models.py  tasks.py  urls.py  views.py
poshapke/users/migrations/: 0001_initial.py  0002_users_is_verified_email_emailverification.py
poshapke/users/templates/users/: login.html  profile.html  register.html
