[tool.poetry]
name = "poshapke"
version = "0.1.0"
description = ""
authors = ["Серей Овинцев <ozonti@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.10"
django = "4.2.8"
python-dotenv = "^1.0.1"
django-extensions = "^3.2.3"
pillow = "^10.2.0"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
