[tool.poetry]
name = "poshapke"
version = "0.1.0"
description = ""
authors = ["Серей Овинцев <ozonti@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.10"
django = "4.2.8"
python-dotenv = "^1.0.1"
django-extensions = "^3.2.3"
pillow = "^10.2.0"
pre-commit = "^3.6.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
psycopg2 = "^2.9.9"
django-allauth = "^0.60.1"
django-debug-toolbar = "^4.3.0"
django-redis = "^5.4.0"
celery = {extras = ["redis"], version = "^5.3.6"}


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[tool.black]
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
